--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLDBConnection": "Data Source=localhost;initial catalog=MinApiDemo;Trusted_Connection=True;"
+  },
+  "Protector_Key": "DotNet6MinApiDemo.Model.v1",
+  "Issuer": "https://login.vbt.com.tr/bkasmer",
+  "Audience": "borakasmer",
+  "SigningKey": "Cut The Night With The Light"
 }
